[package]
name = "my-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.7"
tokio={version="1",features=["full"]}
serde={version="1",features=["derive"]}
serde_json="1"
rusqlite={version="0.31",features=["bundled"]}
reqwest={version="0.12",features=["json"]}
tracing="0.1"
tracing-subscriber={version="0.3",features=["env-filter","fmt"]}
dotenvy="0.15"